# duckdb-http-enterprise

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake_build/release/: CMakeCache.txt  Makefile  cmake_install.cmake  libhttp_client.dylib
configure/: extension_version.txt  platform.txt
docs/: TODO-enterprise.md  design-notes-http-layering.md
src/: http_client_extension.cpp  http_functions.cpp  negotiate_auth.cpp
src/include/: http_client_extension.hpp  http_config.hpp  lru_pool.hpp  negotiate_auth.hpp  rate_limiter.hpp
test/: flask_concurrency_server.py  flask_negotiate_server.py  test_integration.py
test/sql/: http_client.test  http_client_local.test  http_client_server.test
